# lwm2mCore

./: .gitignore  README.md  Readme.txt  codingRules.txt  lwm2mcore.cmake  tinydtls.cmake  wakaama.cmake  wakaama_version.txt
doc/: Doxyfile  DoxygenLayout.xml  README.md  lwm2mcore.dox
doc/resources/: footer.html
examples/linux/: CMakeLists.txt  README.md  cellular.c  clientConfig.c  clientConfig.h  clientConfig.txt  comm.c  config.c  connectivity.c  credentials.c  debug.c  defaultDerKey.h  device.c  downloader.c  fileTransfer.c  location.c  main.c  mutex.c  osDebug.c  osPlatform.c  osPortDevice.c  osPortUpdate.c  osTimer.c  packageCheck.c  paramStorage.c  platform.c  secureDownload.c  security.c  sem.c  server.c  sslUtilities.c  sslUtilities.h  time.c  timer.c  udp.c  update.c  update.h
inc/: lwm2mcore.h  lwm2mcoreCoapHandlers.h  lwm2mcoreObjectHandler.h  lwm2mcorePortDevice.h  lwm2mcorePortSecurity.h  lwm2mcorePortUpdate.h  osPortDevice.h  osPortSecurity.h  osPortUpdate.h
include/lwm2mcore/: cellular.h  coapHandlers.h  connectivity.h  device.h  fileTransfer.h  location.h  lwm2mcore.h  lwm2mcorePackageDownloader.h  memory.h  mutex.h  paramStorage.h  security.h  sem.h  server.h  socket.h  timer.h  udp.h  update.h
include/platform-specific/linux/platform/: inet.h  types.h
include/platform-specific/rtos/platform/: inet.h  osDebug.h  osTime.h  socketRtos.h  types.h
include/platform-specific/threadx/platform/: inet.h  types.h
objectManager/: aclConfiguration.c  aclConfiguration.h  bootstrapConfiguration.c  bootstrapConfiguration.h  clockTimeConfiguration.h  handlers.c  handlers.h  internalCoapHandler.h  lwm2mcoreCoapHandlers.c  lwm2mcoreHandlers.c  lwm2mcoreHandlers.h  lwm2mcoreObjects.c  lwm2mcoreObjects.h  lwm2mcoreObjectsTable.c  lwm2mcorePortDeviceDefault.c  lwm2mcorePortSecurityDefault.c  lwm2mcorePortUpdateDefault.c  objects.c  objects.h  objectsTable.c  paramContent.h  utils.c  utils.h
os/: osDebug.h  osInet.h  osPortSecurity.h  osPortTypes.h  osSocket.h  osTime.h  osTimer.h  osUdp.h
os/linux/: CMakeLists.txt  Makefile  main.c  osDebug.c  osPlatform.c  osPortSecurity.c  osPortUpdate.c  osTime.c  osTimer.c  osUdp.c
os/port/: osPortDevice.c  osPortSecurity.c
packageDownloader/: downloader.h  fileMngt.h  fileTransfer.c  lwm2mcorePackageDownloader.c  lwm2mcorePackageDownloader.h  packageDownloader.h  update.c  updateAgent.h  workspace.c  workspace.h
security/: lwm2mcoreSecurity.c
sessionManager/: dtlsConnection.c  dtlsConnection.h  dtlsconnection.c  dtlsconnection.h  lwm2mcoreSession.c  lwm2mcoreSessionParam.h  session.h  sessionManager.h
tests/: CMakeLists.txt  README.md  download_stub.c  download_stub.h  download_test.c  download_test.h  sampleConfig.c  sampleConfig.h  sessionManagerTests.c  tests.c  tests.h  tinydtls.h  tinydtls_stub.c  wakaama_stub.c
tests/data/: bad_CRC_GET_response.txt  bad_CRC_HEAD_response.txt  bad_signature_GET_response.txt  http_301_HEAD_response.txt  http_404_HEAD_response.txt  http_500_HEAD_response.txt  image.png_GET_response.txt  image.png_HEAD_response.txt  valid_package.bin_GET_response.txt  valid_package.bin_HEAD_response.txt
